# sd-visualiser

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  config.toml  flake-old.nix  flake.nix  grammar.json  highlights.scm  rust-toolchain.toml
.cargo/: config
sd-core/: Cargo.toml  build.rs  grammar.json
sd-core/src/: codeable.rs  common.rs  decompile.rs  dot.rs  examples.rs  expr.rs  free_vars.rs  graph.rs  graph_example.rs  hypergraph.rs  hypergraph_good.rs  interactive.rs  language.pest  language.rs  lexer.rs  lib.rs  lp.rs  monoidal.rs  monoidal_wired.rs  parser.rs  prettyprinter.rs  selection.rs  subgraph.rs  term.rs  utils.rs  weak_map.rs
sd-core/src/hypergraph/: builder.rs  cut.rs  debug.rs  fragment.rs  generic.rs  interactive.rs  internal.rs  mapping.rs  mod.rs  petgraph.rs  reachability.rs  subgraph.rs  traits.rs  utils.rs  weakbyaddress.rs
sd-core/src/hypergraph/adapter/: collapse.rs  cut.rs  mod.rs  selectable.rs
sd-core/src/hypergraph/builder/: fragment.rs  mod.rs
sd-core/src/hypergraph_good/: weakbyaddress.rs
sd-core/src/language/: chil.pest  chil.rs  llvm_ir.rs  mlir.pest  mlir.rs  mod.rs  sd-lang.pest  sd_lang.rs  spartan.pest  spartan.rs  visitor.rs
sd-core/src/language/mlir/: .#mod.rs  internal.rs  mod.rs
sd-core/src/language/snapshots/: sd_core__language__llvm_ir__tests__parse_llvm_ir.snap  sd_core__language__mlir__tests__parse_mlir_block-2.snap  sd_core__language__mlir__tests__parse_mlir_block-3.snap  sd_core__language__mlir__tests__parse_mlir_block-4.snap  sd_core__language__mlir__tests__parse_mlir_block-5.snap  sd_core__language__mlir__tests__parse_mlir_block.snap  sd_core__language__mlir__tests__parse_mlir_operation-2.snap  sd_core__language__mlir__tests__parse_mlir_operation-3.snap  sd_core__language__mlir__tests__parse_mlir_operation-4.snap  sd_core__language__mlir__tests__parse_mlir_operation.snap  sd_core__language__mlir__tests__parse_mlir_region.snap  sd_core__language__tests__hypergraph_ad-minimal.chil.snap  sd_core__language__tests__hypergraph_add.mlir.snap  sd_core__language__tests__hypergraph_add_debug.llvm-ir.snap  sd_core__language__tests__hypergraph_alias_debug.llvm-ir.snap  sd_core__language__tests__hypergraph_aliasing.sd.snap  sd_core__language__tests__hypergraph_bad.sd.snap  sd_core__language__tests__hypergraph_basic.chil.snap  (+58 more)
sd-core/src/monoidal/: graph.rs  mod.rs  permutation.rs  wired_graph.rs
sd-core/src/prettyprinter/: chil.rs  llvm_ir.rs  mlir.rs  mod.rs  sd_lang.rs  spartan.rs
sd-core/src/snapshots/: sd_core__graph__tests__basic_program.snap  sd_core__graph__tests__environment-10.snap  sd_core__graph__tests__environment-11.snap  sd_core__graph__tests__environment-2.snap  sd_core__graph__tests__environment-4.snap  sd_core__graph__tests__environment-5.snap  sd_core__graph__tests__environment-7.snap  sd_core__graph__tests__environment-8.snap  sd_core__graph__tests__environment-9.snap  sd_core__graph__tests__environment.snap  sd_core__graph__tests__fact.snap  sd_core__graph__tests__free_vars.snap  sd_core__graph__tests__free_vars_ad-minimal.chil.snap  sd_core__graph__tests__free_vars_ad.chil.snap  sd_core__graph__tests__free_vars_bad.sd.snap  sd_core__graph__tests__free_vars_basic.chil.snap  sd_core__graph__tests__free_vars_buggy.sd.snap  sd_core__graph__tests__free_vars_corrupt.sd.snap  sd_core__graph__tests__free_vars_fibonacci.chil.snap  sd_core__graph__tests__free_vars_free_vars.sd.snap  sd_core__graph__tests__free_vars_mutual_poset.sd.snap  sd_core__graph__tests__free_vars_thunk_copy.sd.snap  sd_core__graph__tests__free_vars_thunks.sd.snap  sd_core__graph__tests__free_vars_tuples.sd.snap  sd_core__graph__tests__free_vars_with_2.sd.snap  sd_core__graph__tests__free_vars_with_id.sd.snap  sd_core__graph__tests__free_vars_with_none.sd.snap  sd_core__graph__tests__free_vars_with_only_free.sd.snap  sd_core__graph__tests__hypergraph_ad-minimal.chil.snap  sd_core__graph__tests__hypergraph_ad.chil.snap  sd_core__graph__tests__hypergraph_aliasing.sd.snap  sd_core__graph__tests__hypergraph_bad.sd.snap  sd_core__graph__tests__hypergraph_basic.chil.snap  sd_core__graph__tests__hypergraph_basic.sd.snap  sd_core__graph__tests__hypergraph_buggy.sd.snap  sd_core__graph__tests__hypergraph_corrupt.sd.snap  sd_core__graph__tests__hypergraph_crashing.sd.snap  sd_core__graph__tests__hypergraph_fact.sd.snap  sd_core__graph__tests__hypergraph_fibonacci.chil.snap  sd_core__graph__tests__hypergraph_mutual.sd.snap  (+17 more)
sd-core/src/tests/: basic.txt  free_var.txt  thunk.txt
sd-graphics/: Cargo.toml
sd-graphics/src/: common.rs  expanded.rs  intervals.rs  layout.rs  lib.rs  lp.rs  render.rs  renderable.rs  shape.rs  svg.rs
sd-graphics/src/renderable/: collapse.rs  cut.rs  hypergraph.rs  interactive.rs  mod.rs  selectable.rs  subgraph.rs
sd-graphics/src/snapshots/: sd_graphics__layout__tests__copy.snap  sd_graphics__layout__tests__int.snap  sd_graphics__layout__tests__thunk.snap
sd-graphics/tests/: svg.rs
sd-graphics/tests/snapshots/: svg__bug-97.snap  svg__coloured_wires_var_meta.snap  svg__copy.snap  svg__copy_left_assoc.snap  svg__copy_left_unit.snap  svg__copy_right_assoc.snap  svg__copy_right_unit.snap  svg__delete.snap  svg__double_id.snap  svg__double_swap.snap  svg__external_inputs_with_2.snap  svg__external_inputs_with_extra_free.snap  svg__external_inputs_with_id.snap  svg__external_inputs_with_none.snap  svg__external_inputs_with_only_free.snap  svg__id.snap  svg__int.snap  svg__swap.snap  svg__thunk.snap  svg__with_extra_free.snap  svg__with_none.snap  svg__with_only_free.snap
sd-gui/: Cargo.toml  index.html
sd-gui/assets/: manifest.json  sw.js
sd-gui/proptest-regressions/: code.txt
sd-gui/src/: app.rs  code.rs  code_generator.rs  code_ui.rs  graph_ui.rs  highlighter.rs  layout.rs  lib.rs  main.rs  panzoom.rs  parser.rs  sd.sublime-syntax  selection.rs  shape_generator.rs  squiggly_line.rs  subgraph_generator.rs
sd-gui/src/highlighter/: chil.sublime-syntax  mod.rs  sd-lang.sublime-syntax  spartan.sublime-syntax
sd-hyper/: Cargo.toml
sd-hyper/src/: concat_iter.rs  graph.rs  lib.rs
(+134 files in other folders)
