[package]
name = "sd-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
by_address = "1.1.0"
delegate = "0.10.0"
derivative = "2.2.0"
dot-structures = "0.1.1"
either = "1.9.0"
from-pest = "0.3.2"
good_lp = { version = "1.4.1", default-features = false }
indexmap = "2.0.0"
itertools = "0.11.0"
num = "0.4.1"
pest = "2.7.1"
pest-ast = "0.3.4"
pest_derive = "2.7.1"
petgraph = "0.6.3"
pretty = "0.12.1"
priority-queue = "1.3.2"
qcell = "0.5.4"
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.72"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
dir-test = "0.1.1"
insta = { version = "1.31.0", features = ["ron", "redactions"] }
petgraph = { version = "0.6.3", features = ["serde-1"] }
rstest = "0.18.1"
slab = { version = "0.4.8", features = ["serde"] }
serde = "1.0.175"

[features]
default = ["minilp"]
cbc = ["good_lp/coin_cbc"]
highs = ["good_lp/highs"]
minilp = ["good_lp/minilp"]
