[package]
name = "sd-graphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
derivative = "2.2.0"
egui = "0.22.0"
flo_curves = "0.7.2"
good_lp = { version = "1.8.1", default-features = false }
html-escape = "0.2.13"
indexmap = "2.0.0"
itertools = "0.11.0"
ordered-float = "3.9.1"
pretty = "0.12.1"
sd-core = { path = "../sd-core" }
store-interval-tree = "0.4.0"
svg = "0.16.0"
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
insta = { version = "1.31.0", features = ["ron"] }
serde = "1.0.175"

[features]
default = ["minilp"]
clarabel = [ "good_lp/clarabel", "sd-core/clarabel" ]
cbc = ["good_lp/coin_cbc", "sd-core/cbc"]
highs = ["good_lp/highs", "sd-core/highs"]
minilp = ["good_lp/minilp", "sd-core/minilp"]
