[package]
name = "sd-graphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
derivative = "2.2.0"
egui = "0.30.0"
flo_curves = "0.7.3"
good_lp = { version = "1.11.0", default-features = false, features = [ "clarabel" ] }
html-escape = "0.2.13"
indexmap = "2.7.1"
itertools = "0.14.0"
ordered-float = "4.6.0"
pretty = "0.12.3"
sd-core = { path = "../sd-core" }
svg = "0.18.0"
thiserror = "2.0.11"
tracing = "0.1.41"
web-time = "1.1.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
insta = { version = "1.42.1", features = ["ron"] }
serde = "1.0.217"

[target.'cfg(target_arch = "wasm32")'.dependencies]
good_lp = { version = "1.11.0", default-features = false, features = [ "clarabel-wasm" ] }

[features]
default = []
microlp = ["good_lp/minilp", "sd-core/microlp"]
cbc = ["good_lp/coin_cbc", "sd-core/cbc"]
highs = ["good_lp/highs", "sd-core/highs"]
gurobi = ["good_lp/lp-solvers", "sd-core/gurobi"]
