[package]
name = "sd-gui"
version = "0.1.0"
authors = ["Nick Hu <me@nickhu.co.uk>", "Alex Rice <alexrice999@hotmail.co.uk>", "Calin Tataru <calintat@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/calintat/sd-visualiser"

[dependencies]
anyhow = "1.0.70"
eframe = "0.21.3"
sd-core = { path = "../sd-core" }
sd-graphics = { path = "../sd-graphics" }
tracing = "0.1.37"
tree-sitter-highlight = "0.20.1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
