[package]
name = "sd-gui"
description = "String diagram visualiser"
version.workspace = true
authors.workspace = true
edition.workspace = true
# license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
delegate = "0.10.0"
derivative = "2.2.0"
eframe = "0.22.0"
egui-notify = "0.7.0"
from-pest = "0.3.2"
indexmap = "2.0.0"
lru = "0.11.0"
pest = "2.7.1"
rfd = "0.11.4"
sd-core = { path = "../sd-core" }
sd-graphics = { path = "../sd-graphics" }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
thiserror = "1.0.44"
tracing = "0.1.37"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.19"
poll-promise = { version = "0.3.0", features = ["web"] } # release mode panics without https://github.com/EmbarkStudios/poll-promise/pull/14
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"

[features]
default = ["minilp"]
cbc = ["sd-graphics/cbc"]
highs = ["sd-graphics/highs"]
minilp = ["sd-graphics/minilp"]
