[package]
name = "sd-gui"
description = "String diagram visualiser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
delegate = "0.13.2"
derivative = "2.2.0"
dot-structures = "0.1.1"
eframe = "0.30.0"
egui = "0.30.0"
egui-notify = "0.18.0"
from-pest = "0.3.3"
graphviz-rust = "0.9.3"
indexmap = "2.7.1"
lru = "0.13.0"
pest = "2.7.15"
rfd = "0.15.2"
sd-core = { path = "../sd-core" }
sd-graphics = { path = "../sd-graphics" }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.11"
tracing = "0.1.41"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = "0.3.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.25"
poll-promise = { version = "0.3.0", features = ["web"] } # release mode panics without https://github.com/EmbarkStudios/poll-promise/pull/14
tracing-wasm = "0.2.1"
getrandom = { version = "*", features = ["js"]} # enable `js` feature on eframe/egui transitive dep
wasm-bindgen-futures = "0.4.50"

[features]
default = []
microlp = ["sd-graphics/microlp"]
cbc = ["sd-graphics/cbc"]
highs = ["sd-graphics/highs"]
gurobi = ["sd-graphics/gurobi"]
