[package]
name = "sd-hyper"
version = "0.1.0"
authors = ["Nick Hu <me@nickhu.co.uk>", "Alex Rice <alexrice999@hotmail.co.uk>", "Calin Tataru <calintat@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/calintat/sd-visualiser"

[dependencies]
slab = "0.4.8"
thiserror = "1.0.40"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
